# aap

./: .gitignore  PROGRESS.md  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
configs/: phase0_toy_gap.yaml  phase1_qwen2p5_7b_wanda_sweep.yaml
docs/: PHASE0_RESULT.md  PHASE1_BCR_BAND_RESULT.md  PHASE1_BCR_SMOKE_RESULT.md  PHASE1_CURRENT_DECISION.md  PHASE1_PLAN.md  PHASE1_WANDA_PPL_SWEEP_RESULT.md  PHASE1_WANDA_SMOKE_RESULT.md  PHASE2_KEY_EXPERIMENTS.md  PROJECT_NOTES.md  REMOTE_COMMANDS.md
remote/: REMOTE_ENVIRONMENT.md  bootstrap.sh  cleanup_failed_dataset_cache.sh  common.sh  export_phase1_xstest_review.sh  install_lm_eval.sh  run_phase0.sh  run_phase1_alignment_aux.sh  run_phase1_bcr_band.sh  run_phase1_bcr_smoke.sh  run_phase1_eval_preflight.sh  run_phase1_lm_eval_draft.sh  run_phase1_preflight.sh  run_phase1_qa_core.sh  run_phase1_qa_smoke.sh  run_phase1_wanda_ppl_sweep.sh  run_phase1_wanda_smoke.sh  run_phase1_xstest_core.sh  run_phase1_xstest_smoke.sh  run_phase2_key_experiments.sh  run_phase2_key_smoke.sh  run_phase2_qa_confirm.sh  setup_wanda.sh  summarize_phase1_all.sh  summarize_phase1_qa.sh  summarize_phase2_key.sh
scripts/: audit_hf_model_cache.py  cleanup_failed_dataset_cache.py  compute_phase1_bcr_references.py  export_xstest_review_sheet.py  phase1_eval_preflight.py  phase1_preflight.py  prepare_phase1_hh_rlhf.py  run_phase0_toy_gap.py  run_phase1_wanda_bcr_once.py  run_phase1_wanda_once.py  run_phase1_xstest_once.py  setup_wanda_repo.py  summarize_lm_eval_results.py  summarize_phase1_all.py  summarize_phase1_wanda_sweep.py  (+1 more)
(+10 files in other folders)
