[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignment-aware-pruning"
version = "0.1.0"
description = "Gated experiments for alignment-aware pruning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

